fixed the overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,16 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
   background-color: #f5f5f5;
-  max-width: 100%;
-  overflow-x: hidden;
-
+}
+.debug {
+  border: solid 1px red;
+}
+.debug-green {
+  border: solid 1px green;
+}
+.debug-blue {
+  border: solid 1px blue;
+}
+.debug-aqua {
+  border: solid 2px aqua;
 }
